--- a/Views/Home/Team.cshtml
+++ b/Views/Home/Team.cshtml
@@ -49,43 +49,27 @@
 
 								.elementor-widget-heading .elementor-heading-title.elementor-size-xxl {
 									font-size: 59px
-								}</style><h1 class="elementor-heading-title elementor-size-default">Blog</h1>
+								}</style>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-d3970be elementor-invisible" data-id="d3970be" data-element_type="column" data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;animation&quot;:&quot;fadeInUp&quot;}">
-				<div class="elementor-widget-wrap elementor-element-populated">
-					<div class="elementor-element elementor-element-4f12716 elementor-icon-list--layout-inline elementor-list-item-link-full_width elementor-widget elementor-widget-icon-list" data-id="4f12716" data-element_type="widget" data-widget_type="icon-list.default">
-						<div class="elementor-widget-container">
-							<link rel="stylesheet" href="~/wp-content/plugins/elementor/assets/css/widget-icon-list.min.css">		<ul class="elementor-icon-list-items elementor-inline-items">
-								<li class="elementor-icon-list-item elementor-inline-item">
-									<span class="elementor-icon-list-text">Home</span>
-								</li>
-								<li class="elementor-icon-list-item elementor-inline-item">
-									<span class="elementor-icon-list-icon">
-										<svg aria-hidden="true" class="e-font-icon-svg e-fas-chevron-right" viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg"><path d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"></path></svg>
-									</span>
-									<span class="elementor-icon-list-text">Blog</span>
-								</li>
-								<li class="elementor-icon-list-item elementor-inline-item">
-									<span class="elementor-icon-list-icon">
-										<svg aria-hidden="true" class="e-font-icon-svg e-fas-chevron-right" viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg"><path d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"></path></svg>
-									</span>
-									<span class="elementor-icon-list-text">Archives: Templates</span>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="elementor-element elementor-element-11b41cf elementor-widget elementor-widget-heading" data-id="11b41cf" data-element_type="widget" data-widget_type="heading.default">
-						<div class="elementor-widget-container">
-							<h3 class="elementor-heading-title elementor-size-default">Archives: Templates</h3>
-						</div>
-					</div>
-				</div>
-			</div>
+			
 		</div>
 	</section>
+	<center><h1 style="color:yellowgreen">ConTestList</h1></center>
+	<div class="elementor-element elementor-element-5f7b241 elementor-search-form--skin-classic elementor-search-form--button-type-icon elementor-search-form--icon-search elementor-widget elementor-widget-search-form" data-id="5f7b241" data-element_type="widget" data-settings="{&quot;skin&quot;:&quot;classic&quot;}" data-widget_type="search-form.default">
+		<div class="elementor-widget-container">
+			<form class="elementor-search-form" role="search" action="https://point.moxcreative.com/yumma" method="get">
+				<div class="elementor-search-form__container">
+					<input placeholder="Search~." class="elementor-search-form__input" type="search" name="s" title="Search" value="">
+					<button class="elementor-search-form__submit" type="submit" title="Search" aria-label="Search">
+						<div class="e-font-icon-svg-container"><svg class="fa fa-search e-font-icon-svg e-fas-search" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path></svg></div>							<span class="elementor-screen-only">Search</span>
+					</button>
+				</div>
+			</form>
+		</div>
+	</div>
 	<section class="elementor-section elementor-top-section elementor-element elementor-element-fba3abf elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="fba3abf" data-element_type="section">
 		<div class="elementor-container elementor-column-gap-default">
 			<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-526cd96 elementor-invisible" data-id="526cd96" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeIn&quot;}">
@@ -107,6 +91,7 @@
 													@item.Title
 												</a>
 											</h3>
+											<h6>___________________________________</h6>
 											<div class="elementor-post__meta-data">
 												<span class="elementor-post-date">
 													<span>StartDate:</span>
@@ -117,9 +102,10 @@
 													@item.EndDate
 												</span>
 												<span class="elementor-post-date">
-													
+												<h6>___________________________________</h6>	
 												</span>
 											</div>
+											
 											<div class="elementor-post__excerpt">
 												<p id="content">@item.Description</p>
 												<script>
@@ -146,18 +132,7 @@
 			</div>
 			<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-218ada6 elementor-invisible" data-id="218ada6" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInRight&quot;}">
 				<div class="elementor-widget-wrap elementor-element-populated">
-					<div class="elementor-element elementor-element-5f7b241 elementor-search-form--skin-classic elementor-search-form--button-type-icon elementor-search-form--icon-search elementor-widget elementor-widget-search-form" data-id="5f7b241" data-element_type="widget" data-settings="{&quot;skin&quot;:&quot;classic&quot;}" data-widget_type="search-form.default">
-						<div class="elementor-widget-container">
-							<form class="elementor-search-form" role="search" action="https://point.moxcreative.com/yumma" method="get">
-								<div class="elementor-search-form__container">
-									<input placeholder="Search~." class="elementor-search-form__input" type="search" name="s" title="Search" value="">
-									<button class="elementor-search-form__submit" type="submit" title="Search" aria-label="Search">
-										<div class="e-font-icon-svg-container"><svg class="fa fa-search e-font-icon-svg e-fas-search" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path></svg></div>							<span class="elementor-screen-only">Search</span>
-									</button>
-								</div>
-							</form>
-						</div>
-					</div>
+					
 					<section class="elementor-section elementor-inner-section elementor-element elementor-element-032ef3f elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="032ef3f" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
 						<div class="elementor-container elementor-column-gap-default">
 							<div class="elementor-column elementor-col-100 elementor-inner-column elementor-element elementor-element-02687b9" data-id="02687b9" data-element_type="column">
