--- a/Views/Home/TemPlateKit.cshtml
+++ b/Views/Home/TemPlateKit.cshtml
@@ -46,37 +46,7 @@
 
 								.elementor-widget-heading .elementor-heading-title.elementor-size-xxl {
 									font-size: 59px
-								}</style><h1 class="elementor-heading-title elementor-size-default">Blog</h1>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-d3970be elementor-invisible" data-id="d3970be" data-element_type="column" data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;animation&quot;:&quot;fadeInUp&quot;}">
-				<div class="elementor-widget-wrap elementor-element-populated">
-					<div class="elementor-element elementor-element-4f12716 elementor-icon-list--layout-inline elementor-list-item-link-full_width elementor-widget elementor-widget-icon-list" data-id="4f12716" data-element_type="widget" data-widget_type="icon-list.default">
-						<div class="elementor-widget-container">
-							<link rel="stylesheet" href="~/wp-content/plugins/elementor/assets/css/widget-icon-list.min.css">		<ul class="elementor-icon-list-items elementor-inline-items">
-								<li class="elementor-icon-list-item elementor-inline-item">
-									<span class="elementor-icon-list-text">Home</span>
-								</li>
-								<li class="elementor-icon-list-item elementor-inline-item">
-									<span class="elementor-icon-list-icon">
-										<svg aria-hidden="true" class="e-font-icon-svg e-fas-chevron-right" viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg"><path d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"></path></svg>
-									</span>
-									<span class="elementor-icon-list-text">Blog</span>
-								</li>
-								<li class="elementor-icon-list-item elementor-inline-item">
-									<span class="elementor-icon-list-icon">
-										<svg aria-hidden="true" class="e-font-icon-svg e-fas-chevron-right" viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg"><path d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"></path></svg>
-									</span>
-									<span class="elementor-icon-list-text">Archives: Templates</span>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="elementor-element elementor-element-11b41cf elementor-widget elementor-widget-heading" data-id="11b41cf" data-element_type="widget" data-widget_type="heading.default">
-						<div class="elementor-widget-container">
-							<h3 class="elementor-heading-title elementor-size-default">Archives: Templates</h3>
+								}</style>
 						</div>
 					</div>
 				</div>
@@ -108,22 +78,28 @@
 													<span>EndDate:@item.EndDate</span>
 												</span>
 											</div>
+											<h6>___________________________________</h6>
 											<div class="elementor-post__excerpt">
 												<p>Category:</p>
 												<p>@item.CategoryId</p>
+												<h6>___________________________________</h6>
 											</div>
 											<div class="elementor-post__excerpt">
 												<p>Description:</p>
 												<p>@item.Description</p>
+												<h6>___________________________________</h6>	
 											</div>
 											<div class="elementor-post__excerpt">
 												<p>Rule:</p>
 												<p>@item.Rule</p>
 											</div>
+											<h6>___________________________________</h6>
+											<p> Some pic</p>
 											<div>@item.Img</div>
-											<div>anh B</div>
-											<div>anh C</div>
-											<div>anh D</div>
+											<div>@item.Img</div>
+											<div>@item.Img</div>
+											<div>@item.Img</div>
+											<h6>___________________________________</h6>
 											<div class="elementor-element elementor-element-07251aa elementor-author-box--avatar-yes elementor-author-box--name-yes elementor-author-box--biography-yes elementor-author-box--link-no elementor-widget elementor-widget-author-box" data-id="07251aa" data-element_type="widget" data-widget_type="author-box.default">
 												<div class="elementor-widget-container">
 													<div class="elementor-author-box">
@@ -152,8 +128,6 @@
 													<h2 id="reply-title" class="comment-reply-title">Leave a Reply <small><a rel="nofollow" id="cancel-comment-reply-link" href="index.html#respond" style="display:none;">Cancel reply</a></small></h2><form action="https://point.moxcreative.com/yumma/wp-comments-post.php" method="post" id="commentform" class="comment-form" novalidate>
 														<p class="comment-notes"><span id="email-notes">Your email address will not be published.</span> <span class="required-field-message">Required fields are marked <span class="required">*</span></span></p><p class="comment-form-comment"><label for="comment">Comment <span class="required">*</span></label> <textarea id="comment" name="comment" cols="45" rows="8" maxlength="65525" required></textarea></p><p class="comment-form-author"><label for="author">Name <span class="required">*</span></label> <input id="author" name="author" type="text" value="" size="30" maxlength="245" autocomplete="name" required /></p>
 														<p class="comment-form-email"><label for="email">Email <span class="required">*</span></label> <input id="email" name="email" type="email" value="" size="30" maxlength="100" aria-describedby="email-notes" autocomplete="email" required /></p>
-														<p class="comment-form-url"><label for="url">Website</label> <input id="url" name="url" type="url" value="" size="30" maxlength="200" autocomplete="url" /></p>
-														<p class="comment-form-cookies-consent"><input id="wp-comment-cookies-consent" name="wp-comment-cookies-consent" type="checkbox" value="yes" /> <label for="wp-comment-cookies-consent">Save my name, email, and website in this browser for the next time I comment.</label></p>
 														<p class="form-submit">
 															<input name="submit" type="submit" id="submit" class="submit" value="Post Comment" /> <input type='hidden' name='comment_post_ID' value='77' id='comment_post_ID' />
 															<input type='hidden' name='comment_parent' id='comment_parent' value='0' />
@@ -174,32 +148,17 @@
 			</div>
 			<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-218ada6 elementor-invisible" data-id="218ada6" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInRight&quot;}">
 				<div class="elementor-widget-wrap elementor-element-populated">
-					<div class="elementor-element elementor-element-5f7b241 elementor-search-form--skin-classic elementor-search-form--button-type-icon elementor-search-form--icon-search elementor-widget elementor-widget-search-form" data-id="5f7b241" data-element_type="widget" data-settings="{&quot;skin&quot;:&quot;classic&quot;}" data-widget_type="search-form.default">
-						<div class="elementor-widget-container">
-							<form class="elementor-search-form" role="search" action="https://point.moxcreative.com/yumma" method="get">
-								<div class="elementor-search-form__container">
-									<input placeholder="Search~." class="elementor-search-form__input" type="search" name="s" title="Search" value="">
-									<button class="elementor-search-form__submit" type="submit" title="Search" aria-label="Search">
-										<div class="e-font-icon-svg-container"><svg class="fa fa-search e-font-icon-svg e-fas-search" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path></svg></div>							<span class="elementor-screen-only">Search</span>
-									</button>
-								</div>
-							</form>
-						</div>
-					</div>
+					
 					<section class="elementor-section elementor-inner-section elementor-element elementor-element-032ef3f elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="032ef3f" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
 						<div class="elementor-container elementor-column-gap-default">
 							<div class="elementor-column elementor-col-100 elementor-inner-column elementor-element elementor-element-02687b9" data-id="02687b9" data-element_type="column">
 								<div class="elementor-widget-wrap elementor-element-populated">
 									<div class="elementor-element elementor-element-6e0d86e elementor-widget elementor-widget-heading" data-id="6e0d86e" data-element_type="widget" data-widget_type="heading.default">
 										<div class="elementor-widget-container">
-											<h3 class="elementor-heading-title elementor-size-default">Newsletter</h3>
+											<h3 class="elementor-heading-title elementor-size-default">Register Here</h3>
 										</div>
 									</div>
-									<div class="elementor-element elementor-element-4e2f035 elementor-widget elementor-widget-heading" data-id="4e2f035" data-element_type="widget" data-widget_type="heading.default">
-										<div class="elementor-widget-container">
-											<div class="elementor-heading-title elementor-size-default">Subscribe to our newsletter for update informations, recipes or insight</div>
-										</div>
-									</div>
+									
 									<div class="elementor-element elementor-element-ef94d02 elementor-button-align-stretch elementor-widget elementor-widget-form" data-id="ef94d02" data-element_type="widget" data-settings="{&quot;step_next_label&quot;:&quot;Next&quot;,&quot;step_previous_label&quot;:&quot;Previous&quot;,&quot;button_width&quot;:&quot;100&quot;,&quot;step_type&quot;:&quot;number_text&quot;,&quot;step_icon_shape&quot;:&quot;circle&quot;}" data-widget_type="form.default">
 										<div class="elementor-widget-container">
 											<style>
@@ -475,7 +434,7 @@
 																<span class="elementor-align-icon-left elementor-button-icon">
 																	<svg aria-hidden="true" class="e-font-icon-svg e-far-envelope" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"></path></svg>
 																</span>
-																<span class="elementor-button-text">Sign up</span>
+																<span class="elementor-button-text">Register</span>
 															</span>
 														</button>
 													</div>
