--- a/Views/Admin/UpdateUser.cshtml
+++ b/Views/Admin/UpdateUser.cshtml
@@ -67,7 +67,7 @@
 			</div>
 			<div class="card-body">
 				<div class="basic-form">
-					<form method="post" class="saveCategory">
+					<form method="post" class="saveUser">
 						<input type="hidden" name="_token" value="ML92rdCjbEmTftVXgNyoQXBHnoqjfV95zZ8HN7me">
 						<input type="hidden" id="_id" value="@Model" />
 						<div class="row">
